Styled Contact page text. Made text centrally aligned, applied correct font, colour, and weight.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,6 +129,36 @@ img {
     margin-right: auto;
 }
 
+.contact-paragraph {
+    font-family: "Roboto", sans-serif;
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 16px; 
+}
+
+.contact-information {
+    font-family: "Roboto", sans-serif;
+    color: #000000;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.contact-text-1 {
+    width: 20%;
+    display: inline-block;
+    text-align: center;
+    padding-right: 10px;
+    vertical-align: text-top;
+}
+
+.contact-text-2 {
+    width: 20%;
+    display: inline-block;
+    text-align: center;
+    padding-left: 10px;
+    vertical-align: text-top;
+}
+
 /* ---------------------------------------------Footer*/
 
 .footer {
